--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,31 +21,47 @@ body {
     font-size: 15px;
     background-color: var(--main-background);
     /* padding: 11rem 10rem; */
-    position: relative;
-    display: flex;
+    /* position: relative; */
+    /* display: flex; */
     /* justify-content: space-between; */
     /* padding-top: 2rem; */
     /* padding-bottom: 4rem; */
+    /* padding: 6% 0; */
+    /* padding-right: 5%; */
+    /* width: 100%; */
 }
+
+/* .container {
+    width: 100%;
+} */
 
 .card {
     position: absolute;
     border-radius: 10px;
     display: flex;
-    /* width: 100%; */
+    width: 80%;
     background-color: var(--card-background);
     /* position: absolute; */
-    margin: 10%;
+    margin: 40px;
     justify-content: space-between;
+    /* right: -50; */
+    left: 0;
+    right: 0;
+    top: 15%;
+    /* bottom: 0; */
+    margin: auto;
 }
 
 .card > .card-info {
     width: 50%;
-    padding: 5rem;
+    padding: 4.5rem 0;
+    padding-left: 4.5rem;
+    padding-right: 7rem;
 }
 
 .card h1 {
     color: var(--main-heading-stats);
+    font-size: calc(1rem + 1.3rem)
 }
 
 .card h1 > span {
@@ -56,14 +72,22 @@ body {
     color: var(--main-paragraph);
     margin-top: 2rem;
     position: relative;
+    line-height: 1.5;
+    font-size: 1.1rem;
+
+}
+
+.card-info {
+    position: relative;
+    width: 100%;
 }
 
 .card .stats {
     display: flex;
-    gap: 25%;
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 5rem;
+    gap: 2rem;
+    /* position: absolute; */
+    margin-top: 30%;
+    /* margin-bottom: 5rem; */
 }
 
 .card .stats span > h2 {
@@ -75,6 +99,9 @@ body {
     text-transform: uppercase;
 }
 
+.stats {
+    position: relative;
+}
 
 
 
@@ -91,9 +118,10 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0 10px 10px 0;
+    object-fit: cover;
 }
 
-/* .tint {
+.tint {
     display: absolute;
     background: blueviolet;
     z-index: -1;
@@ -104,7 +132,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-} */
+}
 
 
 
@@ -129,6 +157,57 @@ body {
 
 
 
+@media screen and (max-width: 1066px) {
+    .card .stats {
+        flex-wrap: wrap;
+    }
+
+    .card {
+        top: 5%;
+    }
+
+}
+
+.img-mob {
+    display: none;
+}
+
+
+/* .card {
+    position: absolute;
+    border-radius: 10px;
+    display: flex;
+    width: 80%;
+    background-color: var(--card-background);
+    margin: 40px;
+    justify-content: space-between;
+    left: 0;
+    right: 0;
+    top: 15%;
+    margin: auto;
+} */
+
+@media screen and (max-width: 1000px) {
+
+    .img-container {
+        display: none;
+    }
+
+    /* .card-info > img {
+        border-radius: 10px 10px 0 0 ;
+    } */
+
+    .card > .card-info {
+        width: 100%;
+        position: relative;
+        padding: 2rem;
+    }
+
+    .img-mob {
+        display: flex;
+        width: 100%;
+    }
+}
 
 
 
