--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,10 +39,10 @@ body {
     position: absolute;
     border-radius: 10px;
     display: flex;
-    width: 80%;
+    max-width: 80%;
     background-color: var(--card-background);
     /* position: absolute; */
-    margin: 40px;
+    /* margin: 40px; */
     justify-content: space-between;
     /* right: -50; */
     left: 0;
@@ -61,7 +61,7 @@ body {
 
 .card h1 {
     color: var(--main-heading-stats);
-    font-size: calc(1rem + 1.3rem)
+    font-size: calc(0.02rem + 2rem)
 }
 
 .card h1 > span {
@@ -73,7 +73,7 @@ body {
     margin-top: 2rem;
     position: relative;
     line-height: 1.5;
-    font-size: 1.1rem;
+    font-size: calc(0.001rem + 1rem);
 
 }
 
@@ -198,6 +198,8 @@ body {
     }
 
     .card {
+        margin-top: 20px;
+        width: 70%;
         flex-direction: column;
     }
 
@@ -211,6 +213,12 @@ body {
         display: flex;
         width: 100%;
     }
+
+    .card .stats {
+        font-size: 0.75rem;
+        margin-top: 20%;
+    }
+
 }
 
 
